--- a/osm-proxy-spring/pom.xml
+++ b/osm-proxy-spring/pom.xml
@@ -12,36 +12,84 @@
   <artifactId>osm-proxy-spring</artifactId>
 
   <dependencies>
+    <!-- project dependencies -->
+    <dependency>
+      <groupId>de.muehlencord</groupId>
+      <artifactId>osm-proxy-common</artifactId>
+    </dependency>
+
+    <!-- spring -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <optional>true</optional>
     </dependency>
+
+    <!-- open layers -->
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>openlayers</artifactId>
       <version>6.4.2</version>
     </dependency>
 
+    <!-- tools -->
     <dependency>
-      <groupId>de.muehlencord</groupId>
-      <artifactId>osm-proxy-common</artifactId>
-      <version>1.0.6-SNAPSHOT</version>
-      <scope>compile</scope>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
     </dependency>
 
   </dependencies>
 
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/*.properties</include>
+          <include>**/*.yml</include>
+        </includes>
+      </resource>
+
+      <resource>
+        <directory>src/main/resources/static</directory>
+        <filtering>false</filtering>
+        <targetPath>static</targetPath>
+      </resource>
+    </resources>
+
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <classifier>starter</classifier>
+          <layers>
+            <enabled>true</enabled>
+          </layers>
+        </configuration>
+        <executions>
+          <execution>
+            <id>repackage</id>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
     </plugins>
