--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.0</version>
+    <version>2.7.2</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -74,10 +74,12 @@
   </distributionManagement>
 
   <properties>
+    <java.version>17</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <maven.compiler.release>${java.version}</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <timestamp>${maven.build.timestamp}</timestamp>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
     <licenses.dir>${project.build.directory}/third-party-licenses</licenses.dir>
   </properties>
 
@@ -88,27 +90,21 @@
       <dependency>
         <groupId>de.muehlencord</groupId>
         <artifactId>osm-proxy-common</artifactId>
-        <version>1.0.6-SNAPSHOT</version>
+        <version>${project.version}</version>
       </dependency>
       <!-- HTTP client -->
       <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient</artifactId>
-        <version>4.5.13</version>
-        <type>jar</type>
-        <exclusions>
-          <exclusion>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>commons-codec</groupId>
-        <artifactId>commons-codec</artifactId>
-        <version>1.14</version>
+        <groupId>org.apache.httpcomponents.client5</groupId>
+        <artifactId>httpclient5</artifactId>
+        <version>5.1.3</version>
       </dependency>
 
+      <!-- open layers -->
+      <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>openlayers</artifactId>
+        <version>6.14.1</version>
+      </dependency>
 
       <!-- JEE for Wildfly -->
       <dependency>
@@ -122,7 +118,7 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.8.1</version>
+        <version>5.8.2</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
@@ -156,7 +152,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>3.1.0</version>
+            <version>3.2.1</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
